# website

./: .gitignore
.github/workflows/: _e2e-tests.yml  _js-tests.yml  _rust-tests.yml  ci.yml  deploy-api.yml
blog/: .gitignore  const.ts  consts.ts  next.config.js  package-lock.json  package.json
blog/data/posts/: README.md  raw.20210913.md  raw.20210917.md  raw.20220315.md
blog/firebase/: README.md  client_model.ts  model.ts
blog/pages/: index.tsx
blog/pages/api/: edit.js
blog/pages/post/: [pid].tsx
blog/pages/project/: [prid].tsx
blog/pages/project/[prid]/: index.tsx
blog/pages/project/[prid]/post/: [pid].tsx  readPostFile.tsx
blog/posts/: raw.20210913.md
blog/scripts/: pre.sh
blog/styles/: Home.module.css
blog/utils/: wait.ts
passwords/: CLAUDE.md  README.md
passwords/.github/: copilot-instructions.md
passwords/api/: .dockerignore  Cargo.toml  Dockerfile  fly.toml
passwords/api/src/: db.rs  encrypt.rs  env.rs  lib.rs  main.rs  rate_limit.rs
passwords/api/tests/: backcompat_setup.rs  backcompat_tests.rs  common.rs  concurrency_tests.rs  integration_tests.rs  metrics_tests.rs
passwords/app/: package-lock.json  package.json  playwright.config.js
passwords/app/e2e/: passwords.spec.js
passwords/app/public/: electron.js  index.html  manifest.json
passwords/app/src/: App.css  App.js  App.test.js  index.js  theme.js  util.js
passwords/app/src/account/: account.css  account.js  account.test.js  addpasswords.js  passwordQuery.js  passwords.js  signIn.js
passwords/app/src/account/settings/: settings.css  settings.js
passwords/app/src/crypto/: encrypt.js  encrypt.test.js  passwordStrength.js  passwordStrength.test.js
passwords/app/src/loader/: loader.css  loader.js
