[package]
name = "passwords"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test-helpers = []

[dependencies]
data-encoding = "2.10"
ring = "0.16.20"
thiserror = "2.0"
anyhow = "1.0"
passwords_gen = { version = "3.1", package = "passwords" }
dashmap = "6"
dotenv = "0.15"
rocket = { version = "0.5.1", features = ["json"] }
mongodb = "3.5"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }
serde = "1.0"
serde_json = "1.0"