[package]
name = "passwords"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test-helpers = []

[dependencies]
data-encoding = "2.10"
ring = "0.16.20"
thiserror = "2.0"
anyhow = "1.0"
passwords_gen = { version = "3.1", package = "passwords" }
dotenv = "0.15"
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mongodb = "3.5"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }
serde = "1.0"
serde_json = "1.0"
http = "1.0"
tower_governor = "0.8.0"
dashmap = "6"
axum-prometheus = "0.10"
